0x00-python-hello_world/q
  File "./100-write.py", line 3
    sys.stderr.write("and that piece of art is useful - Dora Korpar, 2015-10-19\n"")
                                                                                   ^
SyntaxError: EOL while scanning string literal
